Bonus cleanup stuffs IntelliJ told me to do. Wow!